--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <!-- Start-Top-Bar  -->
     <div class="main-container">
         <header class="top-bar">
             <img class="logo" src="assets/images/xplainer.png" alt="">
@@ -18,6 +19,54 @@
             <h4 class="top-bar-content">Orderly custom fields</h4>
             <button class="top-bar-btn"><img class="top-btn-icon" src="assets/images/gift.png" alt=""> Upgrade to pro</button>
         </header>
+        <!-- End-Top-Bar  -->
+        <div class="opt-body">
+            <!-- Start-Left-Side-Bar  -->
+            <div class="left-sidebar">
+                <h4 class="left-sidebar-heading">Control Panel</h4>
+                <ul class="sidebar-ul">
+                    <li class="sidebar-li "><img src="assets/images/General.png" alt=""><Span class="opt-sidebar-text  active">General</Span></li>  
+                    <li class="sidebar-li"><img src="assets/images/style.png" alt=""><span class="opt-sidebar-text">Style</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/display.png" alt=""><span class="opt-sidebar-text">Display</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/cart.png" alt=""><span class="opt-sidebar-text">Cart</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/order.png" alt=""><span class="opt-sidebar-text">Order</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/string.png" alt=""><span class="opt-sidebar-text">String</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/global.png" alt=""><span class="opt-sidebar-text">Global</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/license.png" alt=""><span class="opt-sidebar-text">License</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/upload_manager.png" alt=""><span class="opt-sidebar-text">Upload Manager</span></li>  
+                    <li class="sidebar-li"><img src="assets/images/custom.png" alt=""><span class="opt-sidebar-text">Custom Code</span></li>  
+                </ul>
+            </div>
+        <!-- End-Left-Side-Bar  -->
+            <div class="opt-main-content">
+                    <ul class="opt-main-content-ul">
+                        <li class="opt-main-content-li opt-main-content-li-active">Initialization</li>
+                        <li class="opt-main-content-li">Final total box</li>
+                        <li class="opt-main-content-li">Various</li>
+                    </ul>
+                    <div class="opt-main-contents">
+                        <div class="opt-contents">
+                            <h4 class="opt-content-heading">Enable front-end for roles</h4>
+                            <p class="opt-content-para">Select the roles that will have access to the extra options.</p>
+                        </div> 
+                        <input class="opt-main-input" type="text">
+                    </div>
+                    <div class="opt-main-contents">
+                        <div class="opt-contents">
+                            <h4 class="opt-content-heading">Enable front-end for roles</h4>
+                            <p class="opt-content-para">Select the roles that will have access to the extra options.</p>
+                        </div>
+                        <input class="opt-main-input" type="text">
+                    </div>
+
+                    <div class="opt-main-content-bottom">
+                        <button class="opt-main-content-bottom-btn">Save Changes</button>
+                        <a class="opt-main-content-bottom-anchor" href="">Reset Settings</a>
+
+                    </div>
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
