--- a/index.html
+++ b/index.html
@@ -12,61 +12,155 @@
 </head>
 <body>
     <!-- Start-Top-Bar  -->
-    <div class="main-container">
-        <header class="top-bar">
-            <img class="logo" src="assets/images/xplainer.png" alt="">
-            <img class="icon_wrapper" src="assets/images/icon_wrapper.png" alt="">
-            <h4 class="top-bar-content">Orderly custom fields</h4>
-            <button class="top-bar-btn"><img class="top-btn-icon" src="assets/images/gift.png" alt=""> Upgrade to pro</button>
+    <div class="opt-main-container">
+        <header class="opt-top-bar">
+            <div class="opt-top-left-side">
+                <img class="logo" src="assets/images/xplainer.png" alt="">
+                <img class="icon_wrapper" src="assets/images/icon_wrapper.png" alt="">
+                <h4 class="top-bar-content">Orderly custom fields</h4>
+            </div>
+            <div class="opt-top-right-side">
+                <button class="top-bar-btn"><img class="top-btn-icon" src="assets/images/gift.png" alt=""><span class="opt-top-bar-text">Upgrade to pro</span></button>
+            </div>
         </header>
         <!-- End-Top-Bar  -->
         <div class="opt-body">
             <!-- Start-Left-Side-Bar  -->
-            <div class="left-sidebar">
-                <h4 class="left-sidebar-heading">Control Panel</h4>
-                <ul class="sidebar-ul">
-                    <li class="sidebar-li "><img src="assets/images/General.png" alt=""><Span class="opt-sidebar-text  active">General</Span></li>  
-                    <li class="sidebar-li"><img src="assets/images/style.png" alt=""><span class="opt-sidebar-text">Style</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/display.png" alt=""><span class="opt-sidebar-text">Display</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/cart.png" alt=""><span class="opt-sidebar-text">Cart</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/order.png" alt=""><span class="opt-sidebar-text">Order</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/string.png" alt=""><span class="opt-sidebar-text">String</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/global.png" alt=""><span class="opt-sidebar-text">Global</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/license.png" alt=""><span class="opt-sidebar-text">License</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/upload_manager.png" alt=""><span class="opt-sidebar-text">Upload Manager</span></li>  
-                    <li class="sidebar-li"><img src="assets/images/custom.png" alt=""><span class="opt-sidebar-text">Custom Code</span></li>  
-                </ul>
-            </div>
-        <!-- End-Left-Side-Bar  -->
-            <div class="opt-main-content">
+            <div class="opt-body-left-child">
+                <div class="left-sidebar">
+                    <h4 class="left-sidebar-heading">Control Panel</h4>
+                    <ul class="sidebar-ul">
+                        <li class="sidebar-li active"><img src="assets/images/General.png" alt=""><Span class="opt-sidebar-text  ">General</Span></li>  
+                        <li class="sidebar-li"><img src="assets/images/style.png" alt=""><span class="opt-sidebar-text">Style</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/display.png" alt=""><span class="opt-sidebar-text">Display</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/cart.png" alt=""><span class="opt-sidebar-text">Cart</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/order.png" alt=""><span class="opt-sidebar-text">Order</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/string.png" alt=""><span class="opt-sidebar-text">String</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/global.png" alt=""><span class="opt-sidebar-text">Global</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/license.png" alt=""><span class="opt-sidebar-text">License</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/upload_manager.png" alt=""><span class="opt-sidebar-text">Upload Manager</span></li>  
+                        <li class="sidebar-li"><img src="assets/images/custom.png" alt=""><span class="opt-sidebar-text">Custom Code</span></li>  
+                    </ul>
+                </div>
+                <!-- End-Left-Side-Bar  -->
+                <!-- start-opt-main-content-->
+                <div class="opt-main-content">
                     <ul class="opt-main-content-ul">
                         <li class="opt-main-content-li opt-main-content-li-active">Initialization</li>
                         <li class="opt-main-content-li">Final total box</li>
                         <li class="opt-main-content-li">Various</li>
                     </ul>
-                    <div class="opt-main-contents">
-                        <div class="opt-contents">
-                            <h4 class="opt-content-heading">Enable front-end for roles</h4>
-                            <p class="opt-content-para">Select the roles that will have access to the extra options.</p>
-                        </div> 
-                        <input class="opt-main-input" type="text">
-                    </div>
-                    <div class="opt-main-contents">
-                        <div class="opt-contents">
-                            <h4 class="opt-content-heading">Enable front-end for roles</h4>
-                            <p class="opt-content-para">Select the roles that will have access to the extra options.</p>
+                    <div class="opt-fields-area">
+                        <div id="opt-field-init" class="opt-main-items opt-field-active">
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable front-end for roles</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div> 
+                                <input class="opt-main-input" type="text">
+                            </div>
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable front-end for roles</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div>
+                                <input class="opt-main-input" type="text">
+                            </div>
                         </div>
-                        <input class="opt-main-input" type="text">
+                        <div id="opt-field-total-box" class="opt-main-items">
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable total box</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div> 
+                                <input class="opt-main-input" type="text">
+                            </div>
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable front-end for roles</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div>
+                                <input class="opt-main-input" type="text">
+                            </div>
+                        </div>
+                        <div id="opt-field-various" class="opt-main-items">
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable various</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div> 
+                                <input class="opt-main-input" type="text">
+                            </div>
+                            <div class="opt-main-item">
+                                <div class="opt-contents">
+                                    <h4 class="opt-item-heading">Enable front-end for roles</h4>
+                                    <p class="opt-item-para">Select the roles that will have access to the extra options.</p>
+                                </div>
+                                <input class="opt-main-input" type="text">
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="opt-main-content-bottom">
-                        <button class="opt-main-content-bottom-btn">Save Changes</button>
-                        <a class="opt-main-content-bottom-anchor" href="">Reset Settings</a>
-
+                    
+                    <div class="opt-main-items-button">
+                        <div class="opt-main-item-button">
+                            <button class="opt-main-content-bottom-btn">Save Changes</button>
+                            <a class="opt-main-content-bottom-anchor" href="">Reset Settings</a>
+                        </div>
                     </div>
-
+                    
+                </div>
+                 <!-- End-opt-main-content-->
             </div>
-        </div>
+                <!-- Start-Right-Side-Bar  -->
+            <div class="opt-body-right-child">
+                <div class="opt-body-right-contents">
+                    <div class="opt-right-side-bar">
+                        <div class="opt-right-side-bar-title">
+                            <img class="opt-right-side-bar-title-img" src="assets/images/love.png" alt="">
+                            <h4 class="opt-right-side-bar-title-heading">Show your love</h4>
+                        </div>
+                        <p class="opt-right-side-bar-para">We love to have you in the SchedulePress family. We are making it more awesome everyday.</p>
+                        <a class="opt-right-side-bar-btn"  href=""><span class="opt-right-side-bar-span">Rate Us</span></a>
+                    </div> 
+                </div>    
+
+                <div class="opt-body-right-contents">
+                    <div class="opt-right-side-bar">
+                        <div class="opt-right-side-bar-title">
+                            <img class="opt-right-side-bar-title-img" src="assets/images/documentation.png" alt="">
+                            <h4 class="opt-right-side-bar-title-heading">Documentation</h4>
+                        </div>
+                        <p class="opt-right-side-bar-para">Get started spending some time with the documentation to get familiar with SchedulePress. Build awesome websites for you or your clients with ease.</p>
+                        <a class="opt-right-side-bar-btn"  href=""><span class="opt-right-side-bar-span">Let's Explore</span></a>
+                    </div> 
+                </div>
+                <div class="opt-body-right-contents">
+                    <div class="opt-right-side-bar">
+                        <div class="opt-right-side-bar-title">
+                            <img class="opt-right-side-bar-title-img" src="assets/images/help.png" alt="">
+                            <h4 class="opt-right-side-bar-title-heading">Need Help</h4>
+                        </div>
+                        <p class="opt-right-side-bar-para">Stuck with something? Get help from the community WPDeveloper Forum or Facebook Community. In case of emerhency, Initiate live hcat at the SchedulePress website.</p>
+                        <a class="opt-right-side-bar-btn"  href=""><span class="opt-right-side-bar-span">Let's Explore</span></a>
+                    </div> 
+                </div>    
+                <div class="opt-body-right-contents">
+                    <div class="opt-right-side-bar">
+                        <div class="opt-right-side-bar-title">
+                            <img class="opt-right-side-bar-title-img" src="assets/images/email.png" alt="">
+                            <h4 class="opt-right-side-bar-title-heading">Subscribe to Newsletter</h4>
+                        </div>
+                        <p class="opt-right-side-bar-para">Subscribe to our mailing list for get any news of the WP-Statistics</p>
+
+                        <input class="opt-right-side-bar-input" type="email" placeholder="sample@mail.com">
+
+                        <a class="opt-right-side-bar-btn"  href=""><span class="opt-right-side-bar-span">Let's Explore</span></a>
+                    </div> 
+                </div>
+            </div>    
+        </div> 
     </div>
+
+    <script src="assets/style.js"></script>
 </body>
 </html>
